# stellar-insights

./: .gitignore  .pr-description.md  BIOMETRIC_AUTH_FIX.md  BRANCH_SUMMARY.md  CI_ISSUES_COMPLETE_SUMMARY.md  CODEBASE_ISSUES_REPORT.md  CODE_CHANGES_VERIFICATION.md  COMPLETE_WORK_SUMMARY.md  CREATE_PR_INSTRUCTIONS.md  DO_THIS_NOW.md  FINAL_ACTION_REQUIRED.md  FIX_CLIPPY_NOW.md  GRACEFUL_SHUTDOWN_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  NPM_SECURITY_AUDIT_FIX.md  PR_DESCRIPTION_SEP10_FIX.md  README_START_HERE.md  SHUTDOWN_VERIFICATION_CHECKLIST.md  TODO_SOROBAN_METADATA.md  VERIFY_CI_CHECKS.md  index.html  package-lock.json  package.json
backend/: .env.example  ACTION_PLAN_CI_FIX.md  CACHE_QUICK_REFERENCE.md  CACHE_README.md  CHANGES_APPLIED.md  CI_FIX_DEPENDENCY_ISSUE.md  CI_INTEGRATION_STATUS.md  CODE_QUALITY.md  CODE_QUALITY_GUIDE.md  CREATE_PR_INSTRUCTIONS.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  PR_DESCRIPTION_FINAL.md  QUICK_QUALITY_GUIDE.md  QUICK_START_CACHE.md  REDIS_CACHING_SUMMARY.md  REFACTOR_CHECKLIST.md  REFACTOR_README.md  REFACTOR_SUMMARY.md  URGENT_CI_FIX.md  WARNINGS_FIXED.md
backend/apm/src/: lib.rs
backend/examples/: aggregation_demo.rs  rpc_demo.rs  snapshot_generation_demo.rs
backend/migrations/: 006_create_users.sql  007_create_corridor_aggregates.sql  013_create_claimable_balances.sql  014_create_vault_audit_log.sql  030_comprehensive_seed_data.sql  032_create_api_keys_rate_limit_config.sql  035_add_transaction_account_index.sql
backend/scripts/: mainnet-health-check.sh  testnet-smoke-tests.sh
backend/src/: admin_audit_log.rs  alert_handlers.rs  alerts.rs  analytics.rs  api_deprecation_middleware.rs  auth.rs  auth_middleware.rs  broadcast.rs  cache.rs  cache_invalidation.rs  cache_middleware.rs  crypto.rs  database.rs  deprecation_middleware.rs  env_config.rs  error.rs  handlers.rs  health_check_enhanced.rs  ip_whitelist_middleware.rs  lib.rs  logging.rs  main.rs  ml.rs  models.rs  monitor.rs  multi_network.rs  muxed.rs  network.rs  openapi.rs  rate_limit.rs  request_id.rs  request_signing_middleware.rs  shutdown.rs  snapshot_handlers.rs  state.rs  validation.rs  websocket.rs
backend/src/analytics/: corridor.rs
backend/src/api/: alerts.rs  analytics_dashboard.rs  anchors.rs  anchors_cached.rs  api_keys.rs  asset_verification.rs  cache_stats.rs  cached_handlers.rs  claimable_balances.rs  contract_events.rs  corridors.rs  corridors_cached.rs  cost_calculator.rs  export.rs  fee_bump.rs  governance.rs  health.rs  ingestion.rs  liquidity_pools.rs  metrics.rs  metrics_cached.rs  mod.rs  network.rs  oauth.rs  price_feed.rs  sep10.rs  sep24_proxy.rs  sep31_proxy.rs  transactions.rs  trustlines.rs  verification_rewards.rs  webhooks.rs
backend/src/auth/: oauth.rs  sep10_middleware.rs  sep10_simple.rs
backend/src/cache/: cache_keys.rs  helpers.rs  metrics.rs  mod.rs  redis_cache.rs
backend/src/db/: aggregates.rs  aggregation.rs  anchors.rs  api_keys.rs  assets.rs  corridors.rs  metrics.rs  schema.rs
backend/src/email/: report.rs  scheduler.rs  service.rs
backend/src/features/: mod.rs  websocket_streaming.rs
backend/src/gdpr/: handlers.rs  service.rs
backend/src/graphql/: resolvers.rs
backend/src/handlers/: job_monitoring.rs
backend/src/ingestion/: ledger.rs  mod.rs
backend/src/jobs/: asset_revalidation.rs  backfill.rs  contract_event_listener.rs  scheduler.rs
backend/src/logging/: redaction.rs
backend/src/models/: api_key.rs  asset_verification.rs  corridor.rs
backend/src/observability/: job_alerts.rs  job_metrics.rs  metrics.rs  slo.rs  tracing.rs
backend/src/replay/: checkpoint.rs  config.rs  engine.rs  event_processor.rs  mod.rs  state_builder.rs  storage.rs
backend/src/rpc/: circuit_breaker.rs  client_trait.rs  config.rs  error.rs  metrics.rs  mock_stellar.rs  mod.rs  rate_limiter.rs  retry.rs  stellar.rs
backend/src/services/: account_merge_detector.rs  aggregation.rs  alert_manager.rs  alert_service.rs  analytics.rs  anchor_monitor.rs  asset_verifier.rs  cache_invalidation.rs  claimable_balance_tracker.rs  contract.rs  contract_listener.rs  event_indexer.rs  fee_bump_tracker.rs  governance.rs  indexing.rs  liquidity_pool_analyzer.rs  mod.rs  price_feed.rs  realtime_broadcaster.rs  slack_bot.rs  snapshot.rs  stellar_toml.rs  trustline_analyzer.rs  verification_rewards.rs  webhook_dispatcher.rs  webhook_event_service.rs
backend/src/shared/: error.rs  validation.rs
backend/src/snapshot/: schema.rs
backend/src/telegram/: bot.rs  client.rs  commands.rs  formatter.rs  subscription.rs
backend/src/temp_test/: mod.rs
backend/src/vault/: client.rs  config.rs  lease.rs
backend/src/webhooks/: events.rs  mod.rs
backend/tests/: analytics_tests.rs  api_corridors_test.rs  api_integration_test.rs  corridor_metrics_test.rs  cost_calculator_test.rs  database_recent_anchor_performance_test.rs  historical_snapshot_test.rs  ml_tests.rs  network_test.rs  pool_config_test.rs  regression.rs  replay_system_test.rs  rpc_resilience_test.rs  services_snapshot_test.rs  snapshot_integration_test.rs  snapshot_service_test.rs  snapshot_test.rs  webhook_event_service_tests.rs  websocket_integration_test.rs
backend/tests/regression/: issue_analytics_nplusone.rs  mod.rs  (+3 more)
contracts/: .env.testnet  .env.testnet.example  Cargo.toml
contracts/governance/: Cargo.toml
contracts/tests/: Cargo.toml
sdk/python/: pyproject.toml
(+346 files in other folders)
