[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stellar-insights"
version = "1.0.0"
description = "Official Python SDK for the Stellar Insights API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "respx==0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "testnet: marks tests as testnet integration tests (deselect with '-m \"not testnet\"')",
]
